[tool.poetry]
name = "apscheduler-sqlmodel-jobstore"
version = "0.1.0"
description = "APScheduler JobStore implementation using SQLModel"
authors = ["Chris White <chriswhite199@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
sqlmodel = "^0.0.6"
APScheduler = "^3.8.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
mypy = "^0.930"
coverage = { extras = ["toml"], version = "^6.2" }
pre-commit = "^2.16.0"
pytest-cov = "^3.0.0"
flake8 = "^4.0.1"
lxml = "^4.7.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest]
log_cli = false
log_level = 'INFO'

[tool.mypy]
ignore_missing_imports = true
